[package]
name    = "ffmpeg-sys-next"
version = "7.1.3"
build   = "build.rs"
links   = "ffmpeg"

authors = ["meh. <meh@schizofreni.co>", "Zhiming Wang <i@zhimingwang.org>"]
license = "WTFPL"

description = "FFI bindings to FFmpeg"
repository  = "https://github.com/zmwangx/rust-ffmpeg-sys"
keywords    = ["audio", "video"]

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
num_cpus   = "1.17"
cc         = "1.2"
pkg-config = "0.3"
bindgen    = { version = "0.72", default-features = false, features = ["runtime"] }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[features]
default  = ["avcodec", "avdevice", "avfilter", "avformat", "swresample", "swscale"]

static = []
build  = ["static"]

# FFmpeg version features
ffmpeg_4_4 = []
ffmpeg_5_0 = []
ffmpeg_5_1 = []
ffmpeg_6_0 = []
ffmpeg_6_1 = []
ffmpeg_7_0 = []
ffmpeg_8_0 = []

# mark enums in generated bindings as #[non_exhaustive]
non-exhaustive-enums = []

# licensing
build-license-gpl      = ["build"]
build-license-nonfree  = ["build"]
build-license-version3 = ["build"]

# misc
build-drm   = ["build"]
build-nvenc = ["build"]
build-pic   = ["build"]
build-zlib  = ["build"]

# ssl
build-lib-gnutls  = ["build"]
build-lib-openssl = ["build"]

# filters
build-lib-fontconfig = ["build"]
build-lib-frei0r     = ["build"]
build-lib-ladspa     = ["build"]
build-lib-ass        = ["build"]
build-lib-freetype   = ["build"]
build-lib-freebidi   = ["build"]
build-lib-opencv     = ["build"]
build-lib-vmaf       = ["build"]

# encoders/decoders
build-lib-aacplus          = ["build"]
build-lib-celt             = ["build"]
build-lib-dav1d            = ["build"]
build-lib-dcadec           = ["build"]
build-lib-faac             = ["build"]
build-lib-fdk-aac          = ["build"]
build-lib-gsm              = ["build"]
build-lib-ilbc             = ["build"]
build-lib-kvazaar          = ["build"]
build-lib-mp3lame          = ["build"]
build-lib-opencore-amrnb   = ["build"]
build-lib-opencore-amrwb   = ["build"]
build-lib-openh264         = ["build"]
build-lib-openjpeg         = ["build"]
build-lib-opus             = ["build"]
build-lib-schroedinger     = ["build"]
build-lib-shine            = ["build"]
build-lib-snappy           = ["build"]
build-lib-speex            = ["build"]
build-lib-stagefright-h264 = ["build"]
build-lib-theora           = ["build"]
build-lib-twolame          = ["build"]
build-lib-utvideo          = ["build"]
build-lib-vo-aacenc        = ["build"]
build-lib-vo-amrwbenc      = ["build"]
build-lib-vorbis           = ["build"]
build-lib-vpx              = ["build"]
build-lib-wavpack          = ["build"]
build-lib-webp             = ["build"]
build-lib-x264             = ["build"]
build-lib-x265             = ["build"]
build-lib-avs              = ["build"]
build-lib-xvid             = ["build"]

# hardware accelleration
build-videotoolbox = ["build"]
build-audiotoolbox = ["build"]
build-vaapi	       = ["build"]
build-lib-d3d11va  = ["build"]
build-lib-dxva2    = ["build"]
build-nvidia       = ["build"]
build-lib-libmfx   = ["build"]
build-mediacodec   = ["build"]
build-amf          = ["build"]
build-vulkan       = ["build"]

# protocols
build-lib-smbclient = ["build"]
build-lib-ssh       = ["build"]

# components
avcodec    = []
avdevice   = ["avformat"]
avfilter   = []
avformat   = ["avcodec"]
avresample = []
postproc   = []
swresample = []
swscale    = []
